Fix z-index of header title

--- a/app/webroot/css/header.css
+++ b/app/webroot/css/header.css
@@ -13,7 +13,7 @@ header {
     margin: 24px 15%;
     padding: 0;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     left: 0;
     width: 170px;
